Fix horizontal bar overflow

--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -6,7 +6,7 @@
 
 
 
-html, body, #root{
+html,  #root{
     width: 100%;
     height: 100%;
 }
